// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generates OpenAPI 3.1.0 using packaged schemas 1`] = `
{
  "components": {
    "schemas": {
      "BelgianEnterpriseNumber": {
        "description": "Canonical 10-digit Belgian enterprise number (KBO/CBE), also known as a company registration number (CRN). It uniquely identifies an organization and is also used as the Belgian VAT identifier.

The number is issued by the Belgian government through the [Crossroads Bank for Enterprises](https://economie.fgov.be/en/themes/enterprises/crossroads-bank-enterprises) (CBE; KBO, BCE or ZDU). It never changes; a different number identifies a different legal organization. The representation contains digits only.

It starts with \`0\` or \`1\` and consists of 8 digits followed by a modulo-97 checksum. Validation checks the structure and checksum, but not registry membership. Checksum validation requires runtime validation.",
        "examples": [
          "0123456749",
          "0453834195",
          "1453834119",
          "1234567401",
        ],
        "maxLength": 10,
        "minLength": 10,
        "pattern": "^[01][0-9]{9}$",
        "title": "Belgian enterprise number",
        "type": "string",
      },
      "BelgianIban": {
        "description": "Uppercase BE followed by 14 digits with ISO 13616 modulo-97 validation. Does not establish account existence. Checksum requires runtime validation.",
        "examples": [
          "BE68539007547034",
        ],
        "maxLength": 16,
        "minLength": 16,
        "pattern": "^BE[0-9]{14}$",
        "title": "Belgian IBAN",
        "type": "string",
      },
      "BelgianSocialSecurityNumber": {
        "description": "Canonical 11-digit Belgian social security number (INSS; INSZ, NISS or ENSS), including national registration and BIS numbers. BIS numbers encode an adjusted birth month (increased by 20 or 40). The representation contains digits only.

An INSS identifies a person for Belgian social security purposes and may change over time; this is the value applicable since \`createdAt\`. Under Belgian labour law, every person who works in Belgium has an INSS.

Validation applies the modulo-97 checksum rules for pre-2000 and post-1999 numbers. It does not validate the birth date, gender or registry membership. Checksum validation requires runtime validation.",
        "examples": [
          "00000000097",
          "86081203314",
          "04031800277",
          "86281203357",
          "05291705534",
        ],
        "maxLength": 11,
        "minLength": 11,
        "pattern": "^[0-9]{11}$",
        "title": "Belgian social security number",
        "type": "string",
      },
      "BelgianVatNumber": {
        "description": "Uppercase BE followed by a structurally valid Belgian enterprise number. Does not establish current VAT registration. Checksum requires runtime validation.",
        "examples": [
          "BE0123456749",
        ],
        "maxLength": 12,
        "minLength": 12,
        "pattern": "^BE[01][0-9]{9}$",
        "title": "Belgian VAT number",
        "type": "string",
      },
      "DateOnly": {
        "description": "A calendar-valid day in the history of the world, using the ISO-8601 canonical YYYY-MM-DD format, without time or timezone. This is stored, communicated, and visualized as-is, and interpreted locally.",
        "examples": [
          "2024-02-29",
          "2020-01-23",
          "1999-01-01",
        ],
        "format": "date",
        "pattern": "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))$",
        "title": "Date only",
        "type": "string",
      },
      "Iban": {
        "allOf": [
          {
            "pattern": "^[A-Z]{2}(?!00|01|99)\\d{2}[A-Z0-9]{11,30}$",
          },
          {
            "pattern": "^(?:AL[0-9]{2}[0-9]{8}[A-Z0-9]{16}|AD[0-9]{2}[0-9]{8}[A-Z0-9]{12}|AT[0-9]{2}[0-9]{16}|AZ[0-9]{2}[A-Z0-9]{4}[0-9]{20}|BH[0-9]{2}[A-Z]{4}[A-Z0-9]{14}|BY[0-9]{2}[A-Z0-9]{4}[0-9]{20}|BE[0-9]{2}[0-9]{12}|BA[0-9]{2}[0-9]{16}|BR[0-9]{2}[0-9]{23}[A-Z]{1}[A-Z0-9]{1}|BG[0-9]{2}[A-Z]{4}[0-9]{6}[A-Z0-9]{8}|CR[0-9]{2}[0-9]{18}|HR[0-9]{2}[0-9]{17}|CY[0-9]{2}[0-9]{8}[A-Z0-9]{16}|CZ[0-9]{2}[0-9]{20}|DK[0-9]{2}[0-9]{14}|DO[0-9]{2}[A-Z]{4}[0-9]{20}|TL[0-9]{2}[0-9]{19}|EE[0-9]{2}[0-9]{16}|FO[0-9]{2}[0-9]{14}|FI[0-9]{2}[0-9]{14}|FR[0-9]{2}[0-9]{10}[A-Z0-9]{11}[0-9]{2}|GE[0-9]{2}[A-Z0-9]{2}[0-9]{16}|DE[0-9]{2}[0-9]{18}|GI[0-9]{2}[A-Z]{4}[A-Z0-9]{15}|GR[0-9]{2}[0-9]{7}[A-Z0-9]{16}|GL[0-9]{2}[0-9]{14}|GT[0-9]{2}[A-Z0-9]{4}[A-Z0-9]{20}|HU[0-9]{2}[0-9]{24}|IS[0-9]{2}[0-9]{22}|IE[0-9]{2}[A-Z0-9]{4}[0-9]{14}|IL[0-9]{2}[0-9]{19}|IT[0-9]{2}[A-Z]{1}[0-9]{10}[A-Z0-9]{12}|JO[0-9]{2}[A-Z]{4}[0-9]{22}|KZ[0-9]{2}[0-9]{3}[A-Z0-9]{13}|XK[0-9]{2}[0-9]{4}[0-9]{10}[0-9]{2}|KW[0-9]{2}[A-Z]{4}[A-Z0-9]{22}|LV[0-9]{2}[A-Z]{4}[A-Z0-9]{13}|LB[0-9]{2}[0-9]{4}[A-Z0-9]{20}|LI[0-9]{2}[0-9]{5}[A-Z0-9]{12}|LT[0-9]{2}[0-9]{16}|LU[0-9]{2}[0-9]{3}[A-Z0-9]{13}|MK[0-9]{2}[0-9]{3}[A-Z0-9]{10}[0-9]{2}|MT[0-9]{2}[A-Z]{4}[0-9]{5}[A-Z0-9]{18}|MR[0-9]{2}[0-9]{23}|MU[0-9]{2}[A-Z]{4}[0-9]{19}[A-Z]{3}|MC[0-9]{2}[0-9]{10}[A-Z0-9]{11}[0-9]{2}|MD[0-9]{2}[A-Z0-9]{2}[A-Z0-9]{18}|ME[0-9]{2}[0-9]{18}|NL[0-9]{2}[A-Z]{4}[0-9]{10}|NO[0-9]{2}[0-9]{11}|PK[0-9]{2}[A-Z0-9]{4}[0-9]{16}|PS[0-9]{2}[A-Z0-9]{4}[0-9]{21}|PL[0-9]{2}[0-9]{24}|PT[0-9]{2}[0-9]{21}|QA[0-9]{2}[A-Z]{4}[A-Z0-9]{21}|RO[0-9]{2}[A-Z]{4}[A-Z0-9]{16}|SM[0-9]{2}[A-Z]{1}[0-9]{10}[A-Z0-9]{12}|SA[0-9]{2}[0-9]{2}[A-Z0-9]{18}|RS[0-9]{2}[0-9]{18}|SK[0-9]{2}[0-9]{20}|SI[0-9]{2}[0-9]{15}|ES[0-9]{2}[0-9]{20}|SE[0-9]{2}[0-9]{20}|CH[0-9]{2}[0-9]{5}[A-Z0-9]{12}|TN[0-9]{2}[0-9]{20}|TR[0-9]{2}[0-9]{5}[A-Z0-9]{17}|AE[0-9]{2}[0-9]{3}[0-9]{16}|GB[0-9]{2}[A-Z]{4}[0-9]{14}|VG[0-9]{2}[A-Z0-9]{4}[0-9]{16})(?![\\s\\S])",
          },
        ],
        "description": "Canonical uppercase IBAN without separators, using the 69 country formats from PPWCode.Util.Validation.IV.IBAN and ISO 7064 MOD 97-10 checksum validation. Does not establish account existence. Checksum requires runtime validation.",
        "examples": [
          "BE68539007547034",
          "DE89370400440532013000",
          "GB82WEST12345698765432",
        ],
        "title": "International IBAN",
        "type": "string",
      },
      "TrimmedString": {
        "description": "Non-empty string without leading or trailing whitespace. Input is never transformed.",
        "examples": [
          "Hello world",
        ],
        "minLength": 1,
        "pattern": "^\\S(?:[\\s\\S]*\\S)?$(?![\\s\\S])",
        "title": "Trimmed string",
        "type": "string",
      },
    },
  },
  "info": {
    "title": "Contracts",
    "version": "1.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/example": {
      "get": {
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "belgianIban": {
                      "$ref": "#/components/schemas/BelgianIban",
                    },
                    "date": {
                      "$ref": "#/components/schemas/DateOnly",
                    },
                    "enterprise": {
                      "$ref": "#/components/schemas/BelgianEnterpriseNumber",
                    },
                    "iban": {
                      "$ref": "#/components/schemas/Iban",
                    },
                    "name": {
                      "$ref": "#/components/schemas/TrimmedString",
                    },
                    "niss": {
                      "$ref": "#/components/schemas/BelgianSocialSecurityNumber",
                    },
                    "vat": {
                      "$ref": "#/components/schemas/BelgianVatNumber",
                    },
                  },
                  "required": [
                    "name",
                    "date",
                    "enterprise",
                    "niss",
                    "vat",
                    "belgianIban",
                    "iban",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Example",
          },
        },
      },
    },
  },
}
`;

exports[`generates OpenAPI 3.2.0 using packaged schemas 1`] = `
{
  "components": {
    "schemas": {
      "BelgianEnterpriseNumber": {
        "description": "Canonical 10-digit Belgian enterprise number (KBO/CBE), also known as a company registration number (CRN). It uniquely identifies an organization and is also used as the Belgian VAT identifier.

The number is issued by the Belgian government through the [Crossroads Bank for Enterprises](https://economie.fgov.be/en/themes/enterprises/crossroads-bank-enterprises) (CBE; KBO, BCE or ZDU). It never changes; a different number identifies a different legal organization. The representation contains digits only.

It starts with \`0\` or \`1\` and consists of 8 digits followed by a modulo-97 checksum. Validation checks the structure and checksum, but not registry membership. Checksum validation requires runtime validation.",
        "examples": [
          "0123456749",
          "0453834195",
          "1453834119",
          "1234567401",
        ],
        "maxLength": 10,
        "minLength": 10,
        "pattern": "^[01][0-9]{9}$",
        "title": "Belgian enterprise number",
        "type": "string",
      },
      "BelgianIban": {
        "description": "Uppercase BE followed by 14 digits with ISO 13616 modulo-97 validation. Does not establish account existence. Checksum requires runtime validation.",
        "examples": [
          "BE68539007547034",
        ],
        "maxLength": 16,
        "minLength": 16,
        "pattern": "^BE[0-9]{14}$",
        "title": "Belgian IBAN",
        "type": "string",
      },
      "BelgianSocialSecurityNumber": {
        "description": "Canonical 11-digit Belgian social security number (INSS; INSZ, NISS or ENSS), including national registration and BIS numbers. BIS numbers encode an adjusted birth month (increased by 20 or 40). The representation contains digits only.

An INSS identifies a person for Belgian social security purposes and may change over time; this is the value applicable since \`createdAt\`. Under Belgian labour law, every person who works in Belgium has an INSS.

Validation applies the modulo-97 checksum rules for pre-2000 and post-1999 numbers. It does not validate the birth date, gender or registry membership. Checksum validation requires runtime validation.",
        "examples": [
          "00000000097",
          "86081203314",
          "04031800277",
          "86281203357",
          "05291705534",
        ],
        "maxLength": 11,
        "minLength": 11,
        "pattern": "^[0-9]{11}$",
        "title": "Belgian social security number",
        "type": "string",
      },
      "BelgianVatNumber": {
        "description": "Uppercase BE followed by a structurally valid Belgian enterprise number. Does not establish current VAT registration. Checksum requires runtime validation.",
        "examples": [
          "BE0123456749",
        ],
        "maxLength": 12,
        "minLength": 12,
        "pattern": "^BE[01][0-9]{9}$",
        "title": "Belgian VAT number",
        "type": "string",
      },
      "DateOnly": {
        "description": "A calendar-valid day in the history of the world, using the ISO-8601 canonical YYYY-MM-DD format, without time or timezone. This is stored, communicated, and visualized as-is, and interpreted locally.",
        "examples": [
          "2024-02-29",
          "2020-01-23",
          "1999-01-01",
        ],
        "format": "date",
        "pattern": "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))$",
        "title": "Date only",
        "type": "string",
      },
      "Iban": {
        "allOf": [
          {
            "pattern": "^[A-Z]{2}(?!00|01|99)\\d{2}[A-Z0-9]{11,30}$",
          },
          {
            "pattern": "^(?:AL[0-9]{2}[0-9]{8}[A-Z0-9]{16}|AD[0-9]{2}[0-9]{8}[A-Z0-9]{12}|AT[0-9]{2}[0-9]{16}|AZ[0-9]{2}[A-Z0-9]{4}[0-9]{20}|BH[0-9]{2}[A-Z]{4}[A-Z0-9]{14}|BY[0-9]{2}[A-Z0-9]{4}[0-9]{20}|BE[0-9]{2}[0-9]{12}|BA[0-9]{2}[0-9]{16}|BR[0-9]{2}[0-9]{23}[A-Z]{1}[A-Z0-9]{1}|BG[0-9]{2}[A-Z]{4}[0-9]{6}[A-Z0-9]{8}|CR[0-9]{2}[0-9]{18}|HR[0-9]{2}[0-9]{17}|CY[0-9]{2}[0-9]{8}[A-Z0-9]{16}|CZ[0-9]{2}[0-9]{20}|DK[0-9]{2}[0-9]{14}|DO[0-9]{2}[A-Z]{4}[0-9]{20}|TL[0-9]{2}[0-9]{19}|EE[0-9]{2}[0-9]{16}|FO[0-9]{2}[0-9]{14}|FI[0-9]{2}[0-9]{14}|FR[0-9]{2}[0-9]{10}[A-Z0-9]{11}[0-9]{2}|GE[0-9]{2}[A-Z0-9]{2}[0-9]{16}|DE[0-9]{2}[0-9]{18}|GI[0-9]{2}[A-Z]{4}[A-Z0-9]{15}|GR[0-9]{2}[0-9]{7}[A-Z0-9]{16}|GL[0-9]{2}[0-9]{14}|GT[0-9]{2}[A-Z0-9]{4}[A-Z0-9]{20}|HU[0-9]{2}[0-9]{24}|IS[0-9]{2}[0-9]{22}|IE[0-9]{2}[A-Z0-9]{4}[0-9]{14}|IL[0-9]{2}[0-9]{19}|IT[0-9]{2}[A-Z]{1}[0-9]{10}[A-Z0-9]{12}|JO[0-9]{2}[A-Z]{4}[0-9]{22}|KZ[0-9]{2}[0-9]{3}[A-Z0-9]{13}|XK[0-9]{2}[0-9]{4}[0-9]{10}[0-9]{2}|KW[0-9]{2}[A-Z]{4}[A-Z0-9]{22}|LV[0-9]{2}[A-Z]{4}[A-Z0-9]{13}|LB[0-9]{2}[0-9]{4}[A-Z0-9]{20}|LI[0-9]{2}[0-9]{5}[A-Z0-9]{12}|LT[0-9]{2}[0-9]{16}|LU[0-9]{2}[0-9]{3}[A-Z0-9]{13}|MK[0-9]{2}[0-9]{3}[A-Z0-9]{10}[0-9]{2}|MT[0-9]{2}[A-Z]{4}[0-9]{5}[A-Z0-9]{18}|MR[0-9]{2}[0-9]{23}|MU[0-9]{2}[A-Z]{4}[0-9]{19}[A-Z]{3}|MC[0-9]{2}[0-9]{10}[A-Z0-9]{11}[0-9]{2}|MD[0-9]{2}[A-Z0-9]{2}[A-Z0-9]{18}|ME[0-9]{2}[0-9]{18}|NL[0-9]{2}[A-Z]{4}[0-9]{10}|NO[0-9]{2}[0-9]{11}|PK[0-9]{2}[A-Z0-9]{4}[0-9]{16}|PS[0-9]{2}[A-Z0-9]{4}[0-9]{21}|PL[0-9]{2}[0-9]{24}|PT[0-9]{2}[0-9]{21}|QA[0-9]{2}[A-Z]{4}[A-Z0-9]{21}|RO[0-9]{2}[A-Z]{4}[A-Z0-9]{16}|SM[0-9]{2}[A-Z]{1}[0-9]{10}[A-Z0-9]{12}|SA[0-9]{2}[0-9]{2}[A-Z0-9]{18}|RS[0-9]{2}[0-9]{18}|SK[0-9]{2}[0-9]{20}|SI[0-9]{2}[0-9]{15}|ES[0-9]{2}[0-9]{20}|SE[0-9]{2}[0-9]{20}|CH[0-9]{2}[0-9]{5}[A-Z0-9]{12}|TN[0-9]{2}[0-9]{20}|TR[0-9]{2}[0-9]{5}[A-Z0-9]{17}|AE[0-9]{2}[0-9]{3}[0-9]{16}|GB[0-9]{2}[A-Z]{4}[0-9]{14}|VG[0-9]{2}[A-Z0-9]{4}[0-9]{16})(?![\\s\\S])",
          },
        ],
        "description": "Canonical uppercase IBAN without separators, using the 69 country formats from PPWCode.Util.Validation.IV.IBAN and ISO 7064 MOD 97-10 checksum validation. Does not establish account existence. Checksum requires runtime validation.",
        "examples": [
          "BE68539007547034",
          "DE89370400440532013000",
          "GB82WEST12345698765432",
        ],
        "title": "International IBAN",
        "type": "string",
      },
      "TrimmedString": {
        "description": "Non-empty string without leading or trailing whitespace. Input is never transformed.",
        "examples": [
          "Hello world",
        ],
        "minLength": 1,
        "pattern": "^\\S(?:[\\s\\S]*\\S)?$(?![\\s\\S])",
        "title": "Trimmed string",
        "type": "string",
      },
    },
  },
  "info": {
    "title": "Contracts",
    "version": "1.0.0",
  },
  "openapi": "3.2.0",
  "paths": {
    "/example": {
      "get": {
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "belgianIban": {
                      "$ref": "#/components/schemas/BelgianIban",
                    },
                    "date": {
                      "$ref": "#/components/schemas/DateOnly",
                    },
                    "enterprise": {
                      "$ref": "#/components/schemas/BelgianEnterpriseNumber",
                    },
                    "iban": {
                      "$ref": "#/components/schemas/Iban",
                    },
                    "name": {
                      "$ref": "#/components/schemas/TrimmedString",
                    },
                    "niss": {
                      "$ref": "#/components/schemas/BelgianSocialSecurityNumber",
                    },
                    "vat": {
                      "$ref": "#/components/schemas/BelgianVatNumber",
                    },
                  },
                  "required": [
                    "name",
                    "date",
                    "enterprise",
                    "niss",
                    "vat",
                    "belgianIban",
                    "iban",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Example",
          },
        },
      },
    },
  },
}
`;
